Fix mis-ordering of styles causing off-center content (again)

--- a/site/content/pages/index.module.scss
+++ b/site/content/pages/index.module.scss
@@ -7,6 +7,7 @@ main {
     max-width: 100%;
 
     & > .column {
+        max-width: 100%;
 
         flex-grow: 1;
         flex-direction: column;
